# rag-mini

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: faq.md  intro.md
src/rag_mini/: cli.py  generate.py  ingest.py  retriever.py  settings.py
